crates/djls-template-ast/src/snapshots/djls_template_ast__parser__tests__html__parse_html_doctype.snap
---
source: crates/djls-template-ast/src/parser.rs
expression: ast
---
nodes:
  - Text:
      content: "<!DOCTYPE html>"
      span:
        start: 0
        length: 15
line_offsets:
  - 0
  - 0
errors: []
