crates/djls-template-ast/src/snapshots/djls_template_ast__parser__tests__html__parse_html_void.snap
---
source: crates/djls-template-ast/src/parser.rs
expression: ast
---
nodes:
  - Text:
      content: "<input type=\"text\" />"
      span:
        start: 0
        length: 21
line_offsets:
  - 0
